<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/hoursContactFragmentMenuBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:background="@color/colorNonWebViewFragmentToolbar"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/hoursContactFragmentMenuBottomAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hoursContactFragmentMenuBottomAddress"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/hoursContactFragmentMenuBottomInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hoursContactFragmentMenuBottomInfo"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/hoursContactFragmentMenuBottomContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hoursContactFragmentMenuBottomContact"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/hoursContactFragmentMenuBottomHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/hoursContactFragmentMenuBottomHours"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/hoursContactFragmentMenuBottomFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/hoursContactFragmentMenuBottom" />

</RelativeLayout>